Adição de suporte ao angular material. Atualização do .gitignore Toolbar e botões no home.html

--- a/www/index.html
+++ b/www/index.html
@@ -4,12 +4,19 @@
     <meta charset="utf-8">
     <title>Brand Demo</title>
 
-    <script src="bower_components/angular/angular.min.js" charset="utf-8"></script>
-    <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js" charset="utf-8"></script>
-    <script src="app.js" charset="utf-8"></script>
-
+    <link rel="stylesheet" href="libs/angular-material/angular-material.min.css" charset="utf-8">
+    <link rel="stylesheet" href="app.css" charset="utf-8">
   </head>
-  <body ng-app="brand-sample">
+  <body ng-app="brand-sample" ng-cloack>
     <div ui-view></div>
+
+    <script src="libs/angular/angular.min.js" charset="utf-8"></script>
+    <script src="libs/angular-ui-router/release/angular-ui-router.min.js" charset="utf-8"></script>
+    <script src="libs/angular-animate/angular-animate.min.js" charset="utf-8"></script>
+    <script src="libs/angular-aria/angular-aria.min.js" charset="utf-8"></script>
+    <script src="libs/angular-messages/angular-messages.min.js" charset="utf-8"></script>
+    <script src="libs/angular-material/angular-material.min.js" charset="utf-8"></script>
+
+    <script src="app.js" charset="utf-8"></script>
   </body>
 </html>
